# Crono

./: .gitignore  Dockerfile  README.md  Scatter.ipynb  package-lock.json  package.json  vue.config.js
.github/workflows/: githubPages.yml
client/: .gitignore  package-lock.json
client/src/components/: Footer.vue  GeneralGroupManager.vue  GeneralManager.vue  NavBar.vue  ScheduleComponent.vue  ThemesSelector.vue  TimerComponent.vue  TimerGroupComponent.vue  (+1 more)
server/: .gitignore  Cargo.toml
server/migrations/: 20230601000000_init.down.sql  20230601000000_init.sql  20230601000000_init.up.sql
server/src/: error.rs  main.rs  router.rs
server/src/dto/: auth_dto.rs  mod.rs
server/src/handler/: auth_handler.rs  group_handler.rs  mod.rs  timer_handler.rs
server/src/model/: mod.rs  timer.rs  timer_group.rs  user.rs
server/src/repository/: user_repo.rs
server/src/service/: auth_service.rs
server/src/utils/: encryption.rs  jwt.rs  mod.rs
src/: App.vue  main.js
src/components/: ChronometerComponent.vue  EditableTimerComponent.vue  GeneralGroupManager.vue  GeneralManager.vue  GoogleLogin.vue  MainHeader.vue  NavBar.vue  ScheduleComponent.vue  ThemesSelector.vue  TimerComponent.vue  TimerGroupComponent.vue  TimerInfo.vue
src/router/: index.js
src/services/: AuthService.js  IntervalService.js
src/stores/: AudioStore.js  GroupStore.js  SessionStore.js  SheduleStore.js  session.js
src/themes/: themes.js
src/views/: AuthView.vue  ConfigView.vue  CronogramaView.vue  FrontPage.vue  GroupsView.vue  HomeView.vue  ModifyScheduleView.vue  ModifyTimerView.vue
(+8 files in other folders)
