[package]
name = "crono-proyect"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
serde = { version = "1.0.188", features = ["derive"] }
shuttle-axum = "0.45.0"
shuttle-runtime = "0.45.0"
shuttle-shared-db = { version = "0.45.0", features = ["postgres", "sqlx"] }
tokio = "1.28.2"
sqlx = "0.7.1"
