[package]
name = "crono-proyect"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.4"
axum-extra = { version = "0.9.3", features = ["typed-header"]}
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0"
shuttle-axum = "0.45.0"
shuttle-runtime = "0.45.0"
shuttle-shared-db = { version = "0.45.0", features = ["postgres", "sqlx"] }
tokio = "1.28.2"
sqlx = "0.7.1"
jsonwebtoken = "8.0"
validator = { version = "0.14", features = ["derive"] }
dotenv = "0.15"
uuid = { version = "0.8", features = ["serde", "v4"] }
bcrypt = "0.10"
rayon = "1.5"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }